# astrodetection

./: .gitignore  LICENSE.txt  README.md  astrodet_test.ipynb  environment_light.yml  environment_standard.yml  next_steps.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
astrodetection/: __init__.py  faissd3lta.py
astrodetection_light/: __init__.py  faissd3lta.py
d3lta/: __init__.py  faissd3lta.py
d3lta_light/: faissd3lta.py
notebooks/: example_synthetic_dataset.ipynb
src/astrodetection/: __init__.py  faissd3lta.py  network_utilities.py  utils.py
src/astrodetection_light/: __init__.py  faissd3lta.py  network_utilities.py  utils.py
tests/: faissd3lta_test.py
utilities/: __init__.py  utils.py
